Fix top intro text being cut off on mobile

--- a/page-builder-styles.css
+++ b/page-builder-styles.css
@@ -1,3 +1,15 @@
+@media screen and (min-width: 28.75em) {
+  form {
+      margin: -60px auto 60px !important;
+  }
+}
+
+@media screen and (min-width: 40em) {
+  form {
+      margin: -160px auto 60px !important;
+  }
+}
+
 .en__field__element, .en__field__element--text, .en__field__input--calendar, .en__field__input--email,
  .en__field__input--number, .en__field__input--password, .en__field__input--telephone, .en__field__input--text,
   .en__field__input--textarea, .en__field__element--radio {
